# kuber-timesheet

./: .gitignore  00_START_HERE.md  ADMIN_DASHBOARD_SETUP.md  ADMIN_DASHBOARD_TROUBLESHOOTING.md  ADMIN_QUICK_START.md  AUTOMATED_DEPLOYMENT.ps1  AUTOMATIC_DEPLOYMENT.ps1  AUTONOMOUS_EXECUTION_COMPLETE.md  BUILD_COMPLETION_SUMMARY.md  BUILD_VERIFICATION.md  CHECK_SETUP.bat  COMPLETE_DEPLOYMENT.ps1  COMPLETE_SYSTEM_TEST_REPORT.md  COMPLETE_TEST_GUIDE.md  DELIVERABLES.md  DELIVERY_PACKAGE_INDEX.md  DEMONSTRATE_DEPLOYMENT.ps1  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE_CHECKLIST_VERIFIED.md  DEPLOYMENT_COMPLETE_VERIFIED.md  DEPLOYMENT_COORDINATOR.ps1  DEPLOYMENT_DIAGNOSTICS.md  DEPLOYMENT_FINAL_VERIFIED.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_PACKAGE_COMPLETE.md  DEPLOYMENT_PROGRESS.md  DEPLOYMENT_READY.md  DEPLOYMENT_REPORT_ADMIN_DASHBOARD.md  DEPLOYMENT_ROADMAP.md  DEPLOYMENT_STATUS_FINAL.md  DEPLOYMENT_STEPS.md  DEPLOYMENT_STEP_BY_STEP.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_VERIFICATION_REPORT_FINAL.md  DEPLOYMENT_VERIFIED_COMPLETE.md  DEPLOY_FINAL.ps1  DEPLOY_NOW.ps1  DEPLOY_SIMPLE.ps1  DEPLOY_TO_VERCEL_AUTO.ps1  DEVELOPER_SETUP.md  (+63 more)
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ClockInButton.tsx  ClockOutButton.tsx
frontend/src/lib/: auth.ts  nepali-api.ts  supabase.ts  time-utils.ts  validators.ts
services/nepali-date-service/: app.py  pyproject.toml  requirements.txt
(+21 files in other folders)
